--- a/dune
+++ b/dune
@@ -1,5 +1,5 @@
 (executable
  (name server)
- (libraries dream cohttp-lwt-unix yojson tyxml)
+ (libraries dream cohttp-lwt-unix yojson tyxml magic-mime x509)
  (preprocess
   (pps ppx_yojson_conv ppx_deriving.show)))
