--- a/src/dune
+++ b/src/dune
@@ -2,4 +2,4 @@
  (name server)
  (libraries dream cohttp-lwt-unix yojson tyxml magic-mime x509 omd)
  (preprocess
-  (pps ppx_yojson_conv ppx_deriving.show)))
+  (pps ppx_yojson_conv)))
